Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58214

QUdpSocket still broken - readyRead() stops firing

XMLWordPrintable

    • 979c8b746b56b8e68acf47b5af2eecf834043b50 124b9a6ff89da8be83a256135ec6c4d0603e9a6f

      With attached test program QUdpSocket::readyRead() signal stops firing while new UDP packets are reveived (and QUdpSocket::hasPendingDatagrams() returns true).

      With Qt5.7.1 there are additional spurious readyRead() signals (QUdpSocket::pendingDatagramSize() call in the connected slot returns -1).

      I believe the problem is an incomplete fix for QTBUG-46552, see [1] for description (and legacy suggested fix).

      [1] https://codereview.qt-project.org/114845

        1. test_qudpsocket_002.cpp
          8 kB
        2. test_qudpsocket_003.cpp
          9 kB
        3. UDPDebug.txt
          1.41 MB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tpochep Timur Pocheptsov
            p_seiderer Peter Seiderer
            Votes:
            2 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes